crates/tests/fixtures/harness/data/error/use_glob_invalid_path/input.rdl

use NonExistent::*;

#[winrt]
mod Test {
    struct Thing {
        a: NoSuchType,
    }
}
        